--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  @variants responsive {
+    /*this is here because next/image has inline padding build into it, which overwrites the padding from tailwind, this is the cleanest way I found to do this, sorry about this humanity but i'm about to use "!important caralho" here*/
+    .p-16-caralho {
+      padding: 4rem !caralho;
+    }
+    .p-24-caralho {
+      padding: 6rem !caralho;
+    }
+  }
+}
