feat: added writing mode utilities

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,5 +11,11 @@
     .p-24-caralho {
       padding: 6rem !caralho;
     }
+    .t-writing-mode-vlr {
+      writing-mode: vertical-lr;
+    }
+    .t-writing-mode-reset {
+      writing-mode: horizontal-tb;
+    }
   }
 }
